[tool.poetry]
name = "qqmusic-api-python"
version = "0.1.2"
description = "QQ音乐API封装库"
authors = ["Luren <dluren.c@gmail.com>"]
packages = [{ include = "qqmusic_api" }]
license = "MIT"
readme = "README.md"
maintainers = ["Luren <dluren.c@gmail.com>"]
homepage = "https://github.com/luren-dc/QQMusicApi"
repository = "https://github.com/luren-dc/QQMusicApi"
documentation = "https://github.com/luren-dc/QQMusicApi"
keywords = ["music", "api", "qqmusic", "tencentmusic"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Natural Language :: Chinese (Simplified)",
  "License :: OSI Approved :: MIT License",
  "Framework :: Pytest",
  "Framework :: aiohttp",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.9"
cryptography = "^41.0.2"
requests = "^2.31.0"
aiohttp = "^3.9.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
pytest-sugar = "^1.0.0"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
pretty = true
python_version = 3.9
show_column_numbers = true

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "TCH",
    "UP",
]

[tool.pytest.ini_options]
pythonpath = "./"
testpaths = ["tests"]
asyncio_mode = "auto"
