[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "qqmusic-api-python"
description = "QQ音乐API封装库"
authors = [
  { name = "Luren", email = "68656403+luren-dc@users.noreply.github.com" },
]
dependencies = [
  "cryptography<42.0.0,>=41.0.2",
  "requests<3.0.0,>=2.31.0",
  "aiohttp<4.0.0,>=3.9.5",
]
requires-python = "<4.0,>=3.9"
readme = "README.md"
license = { text = "MIT" }
maintainers = [
  { name = "Luren", email = "68656403+luren-dc@users.noreply.github.com" },
]
keywords = ["music", "api", "qqmusic", "tencentmusic"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Natural Language :: Chinese (Simplified)",
  "License :: OSI Approved :: MIT License",
  "Framework :: Pytest",
  "Framework :: aiohttp",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/luren-dc/QQMusicApi"
repository = "https://github.com/luren-dc/QQMusicApi"
documentation = "https://github.com/luren-dc/QQMusicApi"

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "file"
path = "qqmusic_api/__init__.py"

[tool.pdm.dev-dependencies]
testing = [
  "pytest<9.0.0,>=8.2.0",
  "pytest-asyncio<1.0.0,>=0.23.6",
  "pytest-sugar<2.0.0,>=1.0.0",
]
docs = [
    "mkdocs-material>=9.5.29",
    "mkdocstrings-python>=1.10.5",
    "mkdocstrings>=0.25.1",
    "mkdocs>=1.6.0",
    "markdown-callouts>=0.4.0",
]
mypy = [
    "mypy>=1.11.0",
    "types-requests>=2.32.0.20240712",
]
linting = [
    "ruff>=0.5.4",
]
markdown-callouts = []

[tool.pdm.build]
includes = ["qqmusic_api", "README.md", "LICENSE", "tests"]

[tool.pdm.scripts]
docs = "mkdocs serve"

[tool.mypy]
pretty = true
python_version = 3.9
show_column_numbers = true

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["Q", "RUF100", "C90", "UP", "I", "D", "T"]
extend-ignore = ["D105", "D107", "D205", "D415"]
pydocstyle = { convention = "google" }

[tool.ruff.lint.per-file-ignores]
"docs/*" = ["D"]
"tests/*" = ["D"]
"qqmusic_api/__init__.py" = ["F405", "F403", "D"]
"qqmusic_api/**/__init__.py" = ["F405", "F403", "D"]

[tool.pytest.ini_options]
pythonpath = "./"
testpaths = ["tests"]
asyncio_mode = "auto"
